tutorial 5 pipes switched

--- a/05-infer/01-lesson/05-01-lesson.Rmd
+++ b/05-infer/01-lesson/05-01-lesson.Rmd
@@ -37,45 +37,45 @@ gss2016_smaller <- read_rds("data/gss2016-n10.rds")
 
 # recode
 
-gss2016 <- gss2016 %>%
+gss2016 <- gss2016 |>
   mutate(consci = if_else(consci == 1, "Low", "High"))
 
 # objects to be used later
 
-p_hat_happy <- gss2016 %>%
-  summarize(prop_happy = mean(happy == "HAPPY")) %>%
+p_hat_happy <- gss2016 |>
+  summarize(prop_happy = mean(happy == "HAPPY")) |>
   pull()
   
-p_hat_consci <- gss2016 %>%
-  summarize(prop_high = mean(consci == "High")) %>%
+p_hat_consci <- gss2016 |>
+  summarize(prop_high = mean(consci == "High")) |>
   pull()
 
 # happy
 set.seed(47)
-boot_dist_happy <- gss2016 %>%
-  specify(response = happy, success = "HAPPY") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_happy <- gss2016 |>
+  specify(response = happy, success = "HAPPY") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "prop")
 
- SE_happy <- boot_dist_happy %>%
-  summarize(se = sd(stat)) %>%
+ SE_happy <- boot_dist_happy |>
+  summarize(se = sd(stat)) |>
   pull()
 
 # consci, just one
 set.seed(47)
-boot_1_consci <- gss2016 %>%
-  specify(response = consci, success = "High") %>%
+boot_1_consci <- gss2016 |>
+  specify(response = consci, success = "High") |>
   generate(reps = 1, type = "bootstrap")
 
 # consci
 set.seed(47)
-boot_dist_consci <- gss2016 %>%
-  specify(response = consci, success = "High") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_consci <- gss2016 |>
+  specify(response = consci, success = "High") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "prop")
 
-SE_consci <- boot_dist_consci %>%
-  summarize(se = sd(stat)) %>%
+SE_consci <- boot_dist_consci |>
+  summarize(se = sd(stat)) |>
   pull()
 ```
 
@@ -139,7 +139,7 @@ glimpse(gss)
 We're going to focus on data from 2016, so we'll filter the data set to only include those rows and save it as a new data set called `gss2016`.
 
 ```{r echo=TRUE}
-gss2016 <- gss %>%
+gss2016 <- gss |>
   filter(year == 2016)
 ```
 
@@ -157,8 +157,8 @@ But let's go a step farther and calculate exact proportion of the sample that re
 To do that we want to summarize the happy variable with a single proportion.  Look to the middle of this line we ask for which respondents their happy value is exactly equal to "happy". This results in a column of `TRUE`s and `FALSE`s. You can find the proportion of `TRUE`s by simply taking the mean. We'll save that as `p_hat`. 
 
 ```{r echo = TRUE}  
-p_hat_happy <- gss2016 %>%
-  summarize(prop_happy = mean(happy == "HAPPY")) %>%
+p_hat_happy <- gss2016 |>
+  summarize(prop_happy = mean(happy == "HAPPY")) |>
   pull()
 
 p_hat_happy
@@ -276,9 +276,9 @@ To implement this, we start with our gss2016 data and then *specify* that we wil
 When we print this new object, we see we now have a data frame that contains 500 p-hats.
 
 ```{r echo = TRUE}
-boot_dist_happy <- gss2016 %>%
-  specify(response = happy, success = "HAPPY") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_happy <- gss2016 |>
+  specify(response = happy, success = "HAPPY") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "prop")
 
 boot_dist_happy
@@ -298,8 +298,8 @@ ggplot(boot_dist_happy, aes(x = stat)) +
 The standard deviation of the `stat` variable in this data frame (the bootstrap distribution) is the **bootstrap standard error** and it can be calculated using the `summarize()` function.
 
 ```{r echo = TRUE}
-SE_happy <- boot_dist_happy %>%
-  summarize(se = sd(stat)) %>%
+SE_happy <- boot_dist_happy |>
+  summarize(se = sd(stat)) |>
   pull()
 
 SE_happy
@@ -341,8 +341,8 @@ ggplot(gss2016, aes(x = consci)) +
 Next, we compute the sample proportion of people that reported having "High" confidence.
 
 ```{r ex2, exercise=TRUE}
-p_hat_consci <- ___ %>%
-  summarize(prop_high = mean(___ == "___")) %>%
+p_hat_consci <- ___ |>
+  summarize(prop_high = mean(___ == "___")) |>
   pull()
 
 p_hat_consci
@@ -354,8 +354,8 @@ p_hat_consci
 
 
 ```{r ex2-solution}
-p_hat_consci <- gss2016 %>%
-  summarize(prop_high = mean(consci == "High")) %>%
+p_hat_consci <- gss2016 |>
+  summarize(prop_high = mean(consci == "High")) |>
   pull()
 
 p_hat_consci
@@ -377,9 +377,9 @@ set.seed(47)
 
 ```{r ex3, exercise=TRUE}
 # Create single bootstrap data set
-boot_1_consci <- gss2016 %>%
+boot_1_consci <- gss2016 |>
   # Specify the response
-  ___(response = ___, success = "___") %>%
+  ___(response = ___, success = "___") |>
   # Generate one bootstrap replicate
   ___(reps = ___, type = "___")
 
@@ -389,28 +389,28 @@ ggplot(___) +
 ```
 
 ```{r ex3-hint-1}
-boot_1_consci <- gss2016 %>%
-  specify(response = consci, success = "___") %>%
+boot_1_consci <- gss2016 |>
+  specify(response = consci, success = "___") |>
   ___(reps = ___, type = "___")
 ```
 
 ```{r ex3-hint-2}
-boot_1_consci <- gss2016 %>%
-  specify(response = consci, success = "High") %>%
+boot_1_consci <- gss2016 |>
+  specify(response = consci, success = "High") |>
   ___(reps = ___, type = "___")
 ```
 
 ```{r ex3-hint-3}
-boot_1_consci <- gss2016 %>%
-  specify(response = consci, success = "High") %>%
+boot_1_consci <- gss2016 |>
+  specify(response = consci, success = "High") |>
   generate(reps = ___, type = "___")
 ```
 
 ```{r ex3-solution}
 # Create single bootstrap data set
-boot_1_consci <- gss2016 %>%
+boot_1_consci <- gss2016 |>
   # Specify the response
-  specify(response = consci, success = "High") %>%
+  specify(response = consci, success = "High") |>
   # Generate one bootstrap replicate
   generate(reps = 1, type = "bootstrap")
 
@@ -425,8 +425,8 @@ We can guess-timate what the sample proportion of people that reported having "H
 
 ```{r ex4, exercise=TRUE}
 # Calculate proportion with High confidence
-boot_1_consci %>%
-  summarize(prop_high = ___) %>%
+boot_1_consci |>
+  summarize(prop_high = ___) |>
   pull()
 ```
 
@@ -436,8 +436,8 @@ boot_1_consci %>%
 
 ```{r ex4-solution}
 # Calculate proportion with High confidence
-boot_1_consci %>%
-  summarize(prop_high = mean(consci == "High")) %>%
+boot_1_consci |>
+  summarize(prop_high = mean(consci == "High")) |>
   pull()
 ```
 
@@ -461,11 +461,11 @@ set.seed(47)
 
 ```{r ex5, exercise=TRUE}
 # Create bootstrap distribution for proportion with High conf
-boot_dist_consci <- gss2016 %>%
+boot_dist_consci <- gss2016 |>
   # Specify the response and success
-  specify(response = ___, ___ = "___") %>%
+  specify(response = ___, ___ = "___") |>
   # Generate 500 bootstrap reps
-  generate(___ = ___, type = "bootstrap") %>%
+  generate(___ = ___, type = "bootstrap") |>
   # Calculate proportions
   calculate(stat = "___")
 
@@ -474,26 +474,26 @@ boot_dist_consci
 ```
 
 ```{r ex5-hint-1}
-boot_dist_consci <- gss2016 %>%
-  specify(response = consci, success = "High") %>%
-  generate(___ = ___, type = "bootstrap") %>%
+boot_dist_consci <- gss2016 |>
+  specify(response = consci, success = "High") |>
+  generate(___ = ___, type = "bootstrap") |>
   calculate(stat = "___")
 ```
 
 ```{r ex5-hint-2}
-boot_dist_consci <- gss2016 %>%
-  specify(response = consci, success = "High") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_consci <- gss2016 |>
+  specify(response = consci, success = "High") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "___")
 ```
 
 ```{r ex5-solution}
 # Create bootstrap distribution for proportion with High conf
-boot_dist_consci <- gss2016 %>%
+boot_dist_consci <- gss2016 |>
   # Specify the response and success
-  specify(response = consci, success = "High") %>%
+  specify(response = consci, success = "High") |>
   # Generate 500 bootstrap reps
-  generate(reps = 500, type = "bootstrap") %>%
+  generate(reps = 500, type = "bootstrap") |>
   # Calculate proportions
   calculate(stat = "prop")
 
@@ -525,28 +525,28 @@ ggplot(boot_dist_consci, aes(x = stat)) +
 And let's also calculate the standard error by `summarize`ing the distribution with its standard deviation, `sd()`, then `pull()` it out.
 
 ```{r ex7, exercise=TRUE}
-SE_consci <- boot_dist_consci %>%
-  ___(se = ___) %>%
+SE_consci <- boot_dist_consci |>
+  ___(se = ___) |>
   ___
 
 SE_consci
 ```
 
 ```{r ex7-hint-1}
-boot_dist_consci %>%
-  summarize(se = sd(___)) %>%
+boot_dist_consci |>
+  summarize(se = sd(___)) |>
   ___
 ```
 
 ```{r ex7-hint-2}
-boot_dist_consci %>%
-  summarize(se = sd(stat)) %>%
+boot_dist_consci |>
+  summarize(se = sd(stat)) |>
   ___
 ```
 
 ```{r ex7-solution}
-SE_consci <- boot_dist_consci %>%
-  summarize(se = sd(stat)) %>%
+SE_consci <- boot_dist_consci |>
+  summarize(se = sd(stat)) |>
   pull()
 
 SE_consci
@@ -695,18 +695,18 @@ set.seed(1234)
 ```
 
 ```{r echo=TRUE}
-gss2014 <- gss %>%
+gss2014 <- gss |>
   filter(year == 2014)
 
-p_hat_happy <- gss2014 %>%
-  summarize(prop_happy = mean(happy == "HAPPY")) %>%
+p_hat_happy <- gss2014 |>
+  summarize(prop_happy = mean(happy == "HAPPY")) |>
   pull()
 
-SE_happy <- gss2014 %>%
-  specify(response = happy, success = "HAPPY") %>%
-  generate(reps = 500, type = "bootstrap") %>%
-  calculate(stat = "prop") %>%
-  summarize(se = sd(stat)) %>%
+SE_happy <- gss2014 |>
+  specify(response = happy, success = "HAPPY") |>
+  generate(reps = 500, type = "bootstrap") |>
+  calculate(stat = "prop") |>
+  summarize(se = sd(stat)) |>
   pull()
 
 c(p_hat_happy - 2 * SE_happy, p_hat_happy + 2 * SE_happy)
@@ -727,18 +727,18 @@ set.seed(1234)
 ```
 
 ```{r echo=TRUE}
-gss2012 <- gss %>%
+gss2012 <- gss |>
   filter(year == 2012)
 
-p_hat_happy <- gss2012 %>%
-  summarize(prop_happy = mean(happy == "HAPPY")) %>%
+p_hat_happy <- gss2012 |>
+  summarize(prop_happy = mean(happy == "HAPPY")) |>
   pull()
 
-SE_happy <- gss2012 %>%
-  specify(response = happy, success = "HAPPY") %>%
-  generate(reps = 500, type = "bootstrap") %>%
-  calculate(stat = "prop") %>%
-  summarize(se = sd(stat)) %>%
+SE_happy <- gss2012 |>
+  specify(response = happy, success = "HAPPY") |>
+  generate(reps = 500, type = "bootstrap") |>
+  calculate(stat = "prop") |>
+  summarize(se = sd(stat)) |>
   pull()
 
 c(p_hat_happy - 2 * SE_happy, p_hat_happy + 2 * SE_happy)
@@ -820,11 +820,11 @@ set.seed(47)
 
 ```{r ex9, exercise=TRUE}
 # Create bootstrap distribution for proportion
-boot_dist_small_n <- ___ %>%
+boot_dist_small_n <- ___ |>
   # Specify the variable and success
-  ___ %>%
+  ___ |>
   # Generate 500 bootstrap reps
-  ___ %>%
+  ___ |>
   # Calculate the statistic
   ___
 
@@ -833,33 +833,33 @@ glimpse(boot_dist_small_n)
 ```
 
 ```{r ex9-hint-1}
-boot_dist_small_n <- gss2016_small %>%
-  specify(response = consci, success = "High") %>%
-  ___ %>%
+boot_dist_small_n <- gss2016_small |>
+  specify(response = consci, success = "High") |>
+  ___ |>
   ___
 ```
 
 ```{r ex9-hint-2}
-boot_dist_small_n <- gss2016_small %>%
-  specify(response = consci, success = "High") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_small_n <- gss2016_small |>
+  specify(response = consci, success = "High") |>
+  generate(reps = 500, type = "bootstrap") |>
   ___
 ```
 
 ```{r ex9-hint-3}
-boot_dist_small_n <- gss2016_small %>%
-  specify(response = consci, success = "High") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_small_n <- gss2016_small |>
+  specify(response = consci, success = "High") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "___")
 ```
 
 ```{r ex9-solution}
 # Create bootstrap distribution for proportion
-boot_dist_small_n <- gss2016_small %>%
+boot_dist_small_n <- gss2016_small |>
   # Specify the variable and success
-  specify(response = consci, success = "High") %>%
+  specify(response = consci, success = "High") |>
   # Generate 500 bootstrap reps
-  generate(reps = 500, type = "bootstrap") %>%
+  generate(reps = 500, type = "bootstrap") |>
   # Calculate the statistic
   calculate(stat = "prop")
 
@@ -874,31 +874,31 @@ Next, summarize the `boot_dist_small_n`'s SE with its standard deviation then pu
 ```{r ex10-setup}
 set.seed(47)
 
-boot_dist_small_n <- gss2016_small %>%
-  specify(response = consci, success = "High") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_small_n <- gss2016_small |>
+  specify(response = consci, success = "High") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "prop")
 ```
 
 ```{r ex10, exercise=TRUE}
-SE_small_n <- ___ %>%
-  summarize(se = ___) %>%
+SE_small_n <- ___ |>
+  summarize(se = ___) |>
   pull()
 
 SE_small_n
 ```
 
 ```{r ex10-hint}
-SE_small_n <- boot_dist_small_n %>%
-  summarize(se = sd(___)) %>%
+SE_small_n <- boot_dist_small_n |>
+  summarize(se = sd(___)) |>
   pull()
 
 SE_small_n
 ```
 
 ```{r ex10-solution}
-SE_small_n <- boot_dist_small_n %>%
-  summarize(se = sd(stat)) %>%
+SE_small_n <- boot_dist_small_n |>
+  summarize(se = sd(stat)) |>
   pull()
 
 SE_small_n
@@ -913,39 +913,39 @@ set.seed(47)
 ```
 
 ```{r ex11, exercise=TRUE}
-boot_dist_smaller_n <-___ %>%
-  ___ %>%
-  ___ %>%
+boot_dist_smaller_n <-___ |>
+  ___ |>
+  ___ |>
   ___
 
 glimpse(boot_dist_smaller_n)
 ```
 
 ```{r ex11-hint-1}
-boot_dist_smaller_n <- gss2016_smaller %>%
-  specify(response = consci, success = "High") %>%
-  ___ %>%
+boot_dist_smaller_n <- gss2016_smaller |>
+  specify(response = consci, success = "High") |>
+  ___ |>
   ___
 ```
 
 ```{r ex11-hint-2}
-boot_dist_smaller_n <- gss2016_smaller %>%
-  specify(response = consci, success = "High") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_smaller_n <- gss2016_smaller |>
+  specify(response = consci, success = "High") |>
+  generate(reps = 500, type = "bootstrap") |>
   ___
 ```
 
 ```{r ex11-hint-3}
-boot_dist_smaller_n <- gss2016_smaller %>%
-  specify(response = consci, success = "High") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_smaller_n <- gss2016_smaller |>
+  specify(response = consci, success = "High") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(___)
 ```
 
 ```{r ex11-solution}
-boot_dist_smaller_n <- gss2016_smaller %>%
-  specify(response = consci, success = "High") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_smaller_n <- gss2016_smaller |>
+  specify(response = consci, success = "High") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "prop")
 
 glimpse(boot_dist_smaller_n)
@@ -957,27 +957,27 @@ Also repeat this process of extracting the SE of `boot_dist_smaller_n` and save 
 
 ```{r ex12-setup}
 set.seed(47)
-boot_dist_smaller_n <- gss2016_smaller %>%
-  specify(response = consci, success = "High") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_smaller_n <- gss2016_smaller |>
+  specify(response = consci, success = "High") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "prop")
 ```
 
 ```{r ex12, exercise=TRUE}
-SE_smaller_n <- ___ %>%
-  ___ %>%
+SE_smaller_n <- ___ |>
+  ___ |>
   ___
 ```
 
 ```{r ex12-hint, exercise=TRUE}
-SE_smaller_n <- boot_dist_smaller %>%
-  summarize(se = sd(stat)) %>%
+SE_smaller_n <- boot_dist_smaller_n |>
+  summarize(se = sd(stat)) |>
   ___
 ```
 
 ```{r ex12-solution, exercise=TRUE}
-SE_smaller_n <- boot_dist_smaller %>%
-  summarize(se = sd(stat)) %>%
+SE_smaller_n <- boot_dist_smaller_n |>
+  summarize(se = sd(stat)) |>
   pull()
 ```
 
@@ -987,23 +987,23 @@ Finally compare the two results! Run the code in the exercise below to see which
 
 ```{r ex13-setup}
 set.seed(47)
-boot_dist_small_n <- gss2016_small %>%
-  specify(response = consci, success = "High") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_small_n <- gss2016_small |>
+  specify(response = consci, success = "High") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "prop")
 
-SE_small_n <- boot_dist_small_n %>%
-  summarize(se = sd(stat)) %>%
+SE_small_n <- boot_dist_small_n |>
+  summarize(se = sd(stat)) |>
   pull()
 
 set.seed(47)
-boot_dist_smaller_n <- gss2016_smaller %>%
-  specify(response = consci, success = "High") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_smaller_n <- gss2016_smaller |>
+  specify(response = consci, success = "High") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "prop")
 
-SE_smaller_n <- boot_dist_smaller_n %>%
-  summarize(se = sd(stat)) %>%
+SE_smaller_n <- boot_dist_smaller_n |>
+  summarize(se = sd(stat)) |>
   pull()
 ```
 
@@ -1021,7 +1021,7 @@ Remember that the proportion of "High" confidence in science in 2016 was pretty 
 In this exercise, you'll be looking at the variable `meta_region`, which records whether or not the respondent lives in the pacific region of the US. These respondents were fairly rare, which allows you to study how SEs behave in a setting where the proportion is is very far from 0.5, e.g. like the proportion of pacific or not pacific in the plot below.
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE}
-gss2016 <- gss2016 %>%
+gss2016 <- gss2016 |>
   mutate(meta_region = fct_collapse(region, pacific = "PACIFIC", other_level = "not pacific"))
 
 ggplot(gss2016, aes(x = meta_region)) +
@@ -1037,41 +1037,41 @@ set.seed(47)
 ```
 
 ```{r ex14, exercise=TRUE}
-boot_dist_low_p <- gss2016 %>%
-  ___ %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_low_p <- gss2016 |>
+  ___ |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "prop")
 
-SE_low_p <- boot_dist %>%
-  ___(se = ___) %>%
+SE_low_p <- boot_dist |>
+  ___(se = ___) |>
   ___
 
 SE_low_p
 ```
 
 ```{r ex14-hint-1}
-boot_dist_low_p <- gss2016 %>%
-  specify(response = meta_region, success = "pacific") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_low_p <- gss2016 |>
+  specify(response = meta_region, success = "pacific") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "prop")
 ```
 
 ```{r ex14-hint-2}
-SE_low_p <- boot_dist_low_p %>%
-  summarize(se = sd(stat)) %>%
+SE_low_p <- boot_dist_low_p |>
+  summarize(se = sd(stat)) |>
   pull()
 ```
 
 ```{r ex14-solution}
 # Construct the bootstrap distribution
-boot_dist_low_p <- gss2016 %>%
-  specify(response = meta_region, success = "pacific") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_low_p <- gss2016 |>
+  specify(response = meta_region, success = "pacific") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "prop")
 
 # Calculate the standard error
-SE_low_p <- boot_dist_low_p %>%
-  summarize(se = sd(stat)) %>%
+SE_low_p <- boot_dist_low_p |>
+  summarize(se = sd(stat)) |>
   pull()
 
 # Compare SEs
@@ -1155,8 +1155,8 @@ OK, let's try our hand at using this shortcut to find the standard error for the
 Let's check the rule-of-thumb to see if our sample size is large enough by multiplying n times p-hat and n times 1 minus p-hat. This gives 116 and 35, so our sample size should be sufficiently large. We also know that the gss uses random sampling to draw these observations, so is safe to assume that one person's answer is independent of the next. 
 
 ```{r echo=TRUE}
-p_hat_happy <- gss2016 %>%
-  summarize(mean(happy == "HAPPY")) %>%
+p_hat_happy <- gss2016 |>
+  summarize(mean(happy == "HAPPY")) |>
   pull()
 
 n <- nrow(gss2016)
@@ -1176,12 +1176,12 @@ SE_happy_approx
 How does it compare to our original computational approach using the bootstrap? Well, if we construct the bootstrap distribution for p-hat, then summarize it by finding it's standard deviation, we estimate a standard error of about 0.032. Those are remarkably similar values! Let's go a step farther.
 
 ```{r echo=TRUE}
-boot_dist_happy <- gss2016 %>%
-  specify(response = happy, success = "HAPPY") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot_dist_happy <- gss2016 |>
+  specify(response = happy, success = "HAPPY") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "prop")
-SE_happy_boot <- boot_dist_happy %>%
-  summarize(sd(stat)) %>%
+SE_happy_boot <- boot_dist_happy |>
+  summarize(sd(stat)) |>
   pull()
 SE_happy_boot
 ``` 
@@ -1233,8 +1233,8 @@ When building _any_ confidence interval, note that you use three ingredients: th
 n <- ___(gss2016)
 
 # Calculate p_hat as the proportion in pacific meta region
-p_hat_meta <- gss2016 %>%
-  ___(prop_pacific = ___(___ == "___")) %>%
+p_hat_meta <- gss2016 |>
+  ___(prop_pacific = ___(___ == "___")) |>
   pull()
 
 # View the result
@@ -1246,8 +1246,8 @@ n <- nrow(gss2016)
 ```
 
 ```{r ex15-hint-2}
-p_hat_meta <- gss2016 %>%
-  summarize(prop_pacific = mean(meta_region == "pacific")) %>%
+p_hat_meta <- gss2016 |>
+  summarize(prop_pacific = mean(meta_region == "pacific")) |>
   pull()
 ```
 
@@ -1256,8 +1256,8 @@ p_hat_meta <- gss2016 %>%
 n <- nrow(gss2016)
 
 # Calculate p_hat as the proportion in pacific meta region
-p_hat_meta <- gss2016 %>%
-  summarize(prop_pacific = mean(meta_region == "pacific")) %>%
+p_hat_meta <- gss2016 |>
+  summarize(prop_pacific = mean(meta_region == "pacific")) |>
   pull()
 
 # View the result
@@ -1276,8 +1276,8 @@ Now we'll construct the confidence interval around this proportion.
 ```{r ex16, exercise=TRUE}
 # From previous step
 n <- nrow(gss2016)
-p_hat_meta <- gss2016 %>%
-  summarize(prop_pacific = mean(meta_region == "pacific")) %>%
+p_hat_meta <- gss2016 |>
+  summarize(prop_pacific = mean(meta_region == "pacific")) |>
   pull()
 
 # Check conditions
@@ -1303,8 +1303,8 @@ SE_approx <- sqrt(p_hat_meta * (1 - p_hat_meta) / n)
 ```{r ex16-solution}
 # From previous step
 n <- nrow(gss2016)
-p_hat <- gss2016 %>%
-  summarize(prop_pacific = mean(meta_region == "pacific")) %>%
+p_hat <- gss2016 |>
+  summarize(prop_pacific = mean(meta_region == "pacific")) |>
   pull()
 
 # Check conditions
