--- a/05-infer/02-lesson/05-02-lesson.Rmd
+++ b/05-infer/02-lesson/05-02-lesson.Rmd
@@ -100,8 +100,8 @@ Let’s use a hypothesis test to study another question on the gss. Respondents
 You can calculate that proportion, p-hat, CL more precisely using the summarize command, and you learn that the proportion is about 0.57.
 
 ```{r echo=TRUE}
-p_hat <- gss2016 %>%
-  summarize(mean(cappun == "FAVOR")) %>%
+p_hat <- gss2016 |>
+  summarize(mean(cappun == "FAVOR")) |>
   pull()
 p_hat
 ``` 
@@ -121,10 +121,10 @@ set.seed(12345)
 ```
 
 ```{r echo=TRUE}
-null <- gss2016 %>%
-  specify(response = cappun, success = "FAVOR") %>%
-  hypothesize(null = "point", p = 0.5) %>% 
-  generate(reps = 500, type = "draw") %>% 
+null <- gss2016 |>
+  specify(response = cappun, success = "FAVOR") |>
+  hypothesize(null = "point", p = 0.5) |> 
+  generate(reps = 500, type = "draw") |> 
   calculate(stat = "prop")
 
 null
@@ -146,8 +146,8 @@ ggplot(null, aes(x = stat)) +
 This is formalized by computing the p-value, the proportion of generated p-hats that were more extreme than the observed p-hat. In other words, we want to summarize the column of statistics by finding the proportion that are greater than 0.57. We multiply that number by two to account for the left tail of the null distribution, which also contained p-hats that were farther from the center of the distribution than 0.57.
 
 ```{r eval=TRUE, echo=TRUE}
-null %>%
-  summarize(mean(stat > p_hat)) %>%
+null |>
+  summarize(mean(stat > p_hat)) |>
   pull() * 2
 ```
 
@@ -197,7 +197,7 @@ ggplot(gss2016, aes(x = postlife)) +
 We can exclude the missing data by calling `na.omit`:
 
 ```{r ex1-naomit, exercise=TRUE}
-gss2016_completecases <- gss2016 %>%
+gss2016_completecases <- gss2016 |>
                           na.omit
 # Using `gss2016`, plot postlife
 ggplot(gss2016_completecases, aes(x = postlife)) +
@@ -210,8 +210,8 @@ Compute the proportion of respondents that do believe in life after death and sa
 
 ```{r ex2, exercise=TRUE}
 # Calculate and save proportion that believe
-p_hat <- ___ %>%
-  summarize(prop_yes = ___) %>%
+p_hat <- ___ |>
+  summarize(prop_yes = ___) |>
   pull()
 
 # See the result
@@ -219,17 +219,17 @@ p_hat
 ```
 
 ```{r ex2-hint}
-p_hat <- ___ %>%
-  na.omit %>% 
-  summarize(prop_yes = mean(postlife == "YES")) %>%
+p_hat <- ___ |>
+  na.omit() |> 
+  summarize(prop_yes = mean(postlife == "YES")) |>
   pull()
 ```
 
 ```{r ex2-solution}
 # Compute and save proportion that believe
-p_hat <- gss2016 %>%
-  na.omit %>%
-  summarize(prop_yes = mean(postlife == "YES")) %>%
+p_hat <- gss2016 |>
+  na.omit() |>
+  summarize(prop_yes = mean(postlife == "YES")) |>
   pull()
 
 # See the result
@@ -251,11 +251,11 @@ Using `gss2016`,
 
 ```{r ex3, exercise=TRUE}
 # Generate one data set under H0
-sim1 <- gss2016 %>%
+sim1 <- gss2016 |>
   # Specify the response and success
-  ___(response = ___, success = ___) %>%
+  ___(response = ___, success = ___) |>
   # Hypothesize the null value of p
-  ___(null = ___, p = ___) %>%
+  ___(null = ___, p = ___) |>
   # Generate a single simulated dataset
   ___(reps = ___, type = ___)
 
@@ -272,13 +272,13 @@ sim1
 
 ```{r ex3-solution}
 # Generate one data set under H0
-sim1 <- gss2016 %>%
+sim1 <- gss2016 |>
   # Explicitly exclude missing data
-  na.omit %>% 
+  na.omit() |> 
   # Specify the response and success
-  specify(response = postlife, success = "YES") %>%
+  specify(response = postlife, success = "YES") |>
   # Hypothesize the null value of p
-  hypothesize(null = "point", p = 0.75) %>%
+  hypothesize(null = "point", p = 0.75) |>
   # Generate a single simulated dataset
   generate(reps = 1, type = "draw")
 
@@ -294,10 +294,10 @@ Using `sim1`, construct a bar plot to visualize the distribution of `postlife`.
 
 ```{r ex4, exercise=TRUE}
 # From previous step
-sim1 <- gss2016 %>%
-  na.omit %>% 
-  specify(response = postlife, success = "YES") %>%
-  hypothesize(null = "point", p = 0.75) %>%
+sim1 <- gss2016 |>
+  na.omit() |> 
+  specify(response = postlife, success = "YES") |>
+  hypothesize(null = "point", p = 0.75) |>
   generate(reps = 1, type = "draw")
 
 # Using sim1, plot postlife
@@ -313,10 +313,10 @@ ___ +
 
 ```{r ex4-solution}
 # From previous step
-sim1 <- gss2016 %>%
-  na.omit %>% 
-  specify(response = postlife, success = "YES") %>%
-  hypothesize(null = "point", p = 0.75) %>%
+sim1 <- gss2016 |>
+  na.omit() |> 
+  specify(response = postlife, success = "YES") |>
+  hypothesize(null = "point", p = 0.75) |>
   generate(reps = 1, type = "draw")
 
 # Using sim1, plot postlife
@@ -329,15 +329,15 @@ Compute the proportion of simulated respondents in `sim1` that believe in life a
 
 ```{r ex5, exercise=TRUE}
 # From previous steps
-sim1 <- gss2016 %>%
-  na.omit %>% 
-  specify(response = postlife, success = "YES") %>%
-  hypothesize(null = "point", p = 0.75) %>%
+sim1 <- gss2016 |>
+  na.omit() |> 
+  specify(response = postlife, success = "YES") |>
+  hypothesize(null = "point", p = 0.75) |>
   generate(reps = 1, type = "draw")
 
 # Compute proportion that believe
-sim1 %>%
-  ___(prop_yes = ___(___ == "___")) %>%
+sim1 |>
+  ___(prop_yes = ___(___ == "___")) |>
   pull()
 ```
 
@@ -347,16 +347,16 @@ In `summarize()`, set `prop_yes` to the mean of cases where `postlife` equals `"
 
 ```{r ex5-solution}
 # From previous steps
-sim1 <- gss2016 %>%
-  na.omit %>% 
-  specify(response = postlife, success = "YES") %>%
-  hypothesize(null = "point", p = 0.75) %>%
+sim1 <- gss2016 |>
+  na.omit() |> 
+  specify(response = postlife, success = "YES") |>
+  hypothesize(null = "point", p = 0.75) |>
   generate(reps = 1, type = "draw")
 
 # Compute proportion that believe
-sim1 %>%
-    na.omit %>%    
-    summarize(prop_yes = mean(postlife == "YES")) %>%
+sim1 |>
+    na.omit() |>    
+    summarize(prop_yes = mean(postlife == "YES")) |>
     pull()
 ```
 
@@ -367,15 +367,15 @@ In the last exercise, you got a sense of what a single simulated p-hat might be 
 In this exercise, you'll settle this question.
 
 ```{r testing_a_claim_setup, echo=FALSE}
-sim1 <- gss2016 %>%
-  na.omit %>% 
-  specify(response = postlife, success = "YES") %>%
-  hypothesize(null = "point", p = 0.75) %>%
+sim1 <- gss2016 |>
+  na.omit() |> 
+  specify(response = postlife, success = "YES") |>
+  hypothesize(null = "point", p = 0.75) |>
   generate(reps = 1, type = "draw")
 # Find the observed proportion
-p_hat <- gss2016 %>%
-    na.omit %>%    
-    summarize(prop_yes = mean(postlife == "YES")) %>%
+p_hat <- gss2016 |>
+    na.omit() |>    
+    summarize(prop_yes = mean(postlife == "YES")) |>
     pull()
 ```
 
@@ -383,11 +383,11 @@ Extend your code for the last exercise to `calculate()` sample proportions of be
 
 ```{r ex6, exercise=TRUE}
 # Generate null distribution
-___ <- gss2016 %>%
-  na.omit %>% 
-  specify(response = postlife, success = "YES") %>%
-  hypothesize(null = "point", p = 0.75) %>%
-  generate(reps = ___, type = "draw") %>%
+___ <- gss2016 |>
+  na.omit() |> 
+  specify(response = postlife, success = "YES") |>
+  hypothesize(null = "point", p = 0.75) |>
+  generate(reps = ___, type = "draw") |>
   # Calculate proportions
   ___(stat = ___)
 ```
@@ -398,11 +398,11 @@ ___ <- gss2016 %>%
 
 ```{r ex6-solution}
 # Generate null distribution
-null <- gss2016 %>%
-  na.omit %>% 
-  specify(response = postlife, success = "YES") %>%
-  hypothesize(null = "point", p = 0.75) %>%
-  generate(reps = 500, type = "draw") %>%
+null <- gss2016 |>
+  na.omit() |> 
+  specify(response = postlife, success = "YES") |>
+  hypothesize(null = "point", p = 0.75) |>
+  generate(reps = 500, type = "draw") |>
   # Calculate proportions
   calculate(stat = "prop")
 ```
@@ -410,11 +410,11 @@ null <- gss2016 %>%
 Visualize the null distribution by creating a density plot of the statistics. Using `geom_vline()`, add a vertical line at the value of `p_hat` (from the last exercise), colored `"red"`. 
 
 ```{r ex7, exercise=TRUE, exercise.setup="testing_a_claim_setup"}
-null <- gss2016 %>%
-  na.omit %>% 
-  specify(response = postlife, success = "YES") %>%
-  hypothesize(null = "point", p = 0.75) %>%
-  generate(reps = 500, type = "draw") %>%
+null <- gss2016 |>
+  na.omit() |> 
+  specify(response = postlife, success = "YES") |>
+  hypothesize(null = "point", p = 0.75) |>
+  generate(reps = 500, type = "draw") |>
   # Calculate proportions
   calculate(stat = "prop")
 
@@ -434,11 +434,11 @@ ___ +
 ```
 
 ```{r ex7-solution}
-null <- gss2016 %>%
-  na.omit %>% 
-  specify(response = postlife, success = "YES") %>%
-  hypothesize(null = "point", p = 0.75) %>%
-  generate(reps = 500, type = "draw") %>%
+null <- gss2016 |>
+  na.omit() |> 
+  specify(response = postlife, success = "YES") |>
+  hypothesize(null = "point", p = 0.75) |>
+  generate(reps = 500, type = "draw") |>
   # Calculate proportions
   calculate(stat = "prop")
 
@@ -454,22 +454,22 @@ ggplot(null, aes(x = stat)) +
 - Compute the two-tailed p-value (where the proportion of null values is equal to or more extreme than the observed `p_hat`) from this by multiplying by 2.
 
 ```{r ex8, exercise=TRUE, exercise.setup="testing_a_claim_setup"}
-null <- gss2016 %>%
-  na.omit %>% 
-  specify(response = postlife, success = "YES") %>%
-  hypothesize(null = "point", p = 0.75) %>%
-  generate(reps = 500, type = "draw") %>%
+null <- gss2016 |>
+  na.omit() |> 
+  specify(response = postlife, success = "YES") |>
+  hypothesize(null = "point", p = 0.75) |>
+  generate(reps = 500, type = "draw") |>
   # Calculate proportions
   calculate(stat = "prop")
 
 
-___ %>%
+___ |>
   summarize(
     # Compute the one-tailed p-value
     one_tailed_pval = ___(___ >= ___),
     # Compute the two-tailed p-value
     two_tailed_pval = ___ * ___
-  ) %>%
+  ) |>
   pull(two_tailed_pval)
 ```
 
@@ -478,22 +478,22 @@ ___ %>%
 ```
 
 ```{r ex8-solution}
-null <- gss2016 %>%
-  na.omit %>% 
-  specify(response = postlife, success = "YES") %>%
-  hypothesize(null = "point", p = 0.75) %>%
-  generate(reps = 500, type = "draw") %>%
+null <- gss2016 |>
+  na.omit() |> 
+  specify(response = postlife, success = "YES") |>
+  hypothesize(null = "point", p = 0.75) |>
+  generate(reps = 500, type = "draw") |>
   # Calculate proportions
   calculate(stat = "prop")
 
 
-null %>%
+null |>
   summarize(
     # Compute the one-tailed p-value
     one_tailed_pval = mean(stat >= p_hat),
     # Compute the two-tailed p-value
     two_tailed_pval = 2 * one_tailed_pval
-  ) %>%
+  ) |>
   pull(two_tailed_pval)
 ```
 
@@ -504,8 +504,8 @@ It's common practice to conclude a hypothesis test by making a binary decision a
 Remember, you can compute p-value with the following.
 
 ```{r eval=FALSE}
-null %>%
-  summarize(pval = 2 * mean(stat > p_hat)) %>%
+null |>
+  summarize(pval = 2 * mean(stat > p_hat)) |>
   pull()
 ```
 
@@ -523,18 +523,18 @@ question("Using an alpha level of .05, what is your decision regarding the null 
 
 
 ```{r, include=FALSE}
-sim1 <- gss2016 %>%
-specify(response = postlife, success = "YES") %>%
-hypothesize(null = "point", p = .75) %>%
+sim1 <- gss2016 |>
+specify(response = postlife, success = "YES") |>
+hypothesize(null = "point", p = .75) |>
 generate(reps = 1, type = "draw")
-p_hat <- gss2016 %>%
-summarize(mean(postlife == "YES", na.rm = TRUE)) %>%
+p_hat <- gss2016 |>
+summarize(mean(postlife == "YES", na.rm = TRUE)) |>
 pull()
-null <- gss2016 %>%
-  na.omit %>% 
-  specify(response = postlife, success = "YES") %>%
-  hypothesize(null = "point", p = .75) %>%
-  generate(reps = 500, type = "draw") %>%
+null <- gss2016 |>
+  na.omit() |> 
+  specify(response = postlife, success = "YES") |>
+  hypothesize(null = "point", p = .75) |>
+  generate(reps = 500, type = "draw") |>
   # Calculate proportions
   calculate(stat = "prop")
 
@@ -546,8 +546,8 @@ ggplot(null, aes(x = stat)) +
   geom_vline(xintercept = p_hat, color = "red")
 
 # Compute the two-tailed p-value
-null %>%
-  summarize(pval = mean(stat >= p_hat)) %>%
+null |>
+  summarize(pval = mean(stat >= p_hat)) |>
   pull() * 2
 ```
 
@@ -608,9 +608,9 @@ We can convert these to proportions by adding the position equals "fill" argumen
 
 
 ```{r }
-p_hats <- gss2016 %>%
-  group_by(sex) %>%
-  summarize(mean(postlife == "YES", na.rm = TRUE)) %>%
+p_hats <- gss2016 |>
+  group_by(sex) |>
+  summarize(mean(postlife == "YES", na.rm = TRUE)) |>
   pull()
 ``` 
 
@@ -651,13 +651,13 @@ We could also phrase it as "The variable postlife is independent from the variab
 
 
 ```{r eval=FALSE}
-gss2016 %>%
+gss2016 |>
   specify(
     response = postlife, 
     explanatory = sex, 
     success = "YES"
-  ) %>%
-  hypothesize(null = "independence") %>%
+  ) |>
+  hypothesize(null = "independence") |>
   generate(reps = 1, type = "permute")
 ```
 
@@ -669,12 +669,12 @@ This code will work, but before we run it we'll make one change.
 ### 
 
 ```{r eval=FALSE}
-gss2016 %>%
+gss2016 |>
   specify(
     postlife ~ sex,  # this line is new
     success = "YES"
-  ) %>%
-  hypothesize(null = "independence") %>%
+  ) |>
+  hypothesize(null = "independence") |>
   generate(reps = 1, type = "permute")
 ```
 
@@ -708,12 +708,12 @@ When we run this code, we see it generates a data set with these two columns but
 
 
 ```{r eval=FALSE}
-gss2016 %>%
+gss2016 |>
   specify(
     postlife ~ sex, 
     success = "YES"
-  ) %>%
-  hypothesize(null = "independence") %>%
+  ) |>
+  hypothesize(null = "independence") |>
   generate(reps = 1, type = "permute")
 ```
 
@@ -749,10 +749,10 @@ Let's use this method to build up a full null distribution.
 
  
 ```{r eval=FALSE}
-gss2016 %>%
-  specify(postlife ~ sex, success = "YES") %>%
-  hypothesize(null = "independence") %>%
-  generate(reps = 500, type = "permute") %>%
+gss2016 |>
+  specify(postlife ~ sex, success = "YES") |>
+  hypothesize(null = "independence") |>
+  generate(reps = 500, type = "permute") |>
   calculate(stat = "diff in props", order = c("FEMALE", "MALE"))
 ```
 
@@ -822,11 +822,11 @@ Compute the proportion that `FAVOR` for men and women respectively, then save th
 
 ```{r ex10, exercise=TRUE}
 # Compute two proportions
-___ <- gss2016 %>%
+___ <- gss2016 |>
   # Group by sex
-  group_by(___) %>%
+  group_by(___) |>
   # Calculate proportion that FAVOR
-  summarize(prop_favor = ___) %>%
+  summarize(prop_favor = ___) |>
   pull()
 
 # See the result
@@ -839,11 +839,11 @@ p_hats
 
 ```{r ex10-solution}
 # Compute two proportions
-p_hats <- gss2016 %>%
+p_hats <- gss2016 |>
   # Group by sex
-  group_by(sex) %>%
+  group_by(sex) |>
   # Calculate proportion that FAVOR
-  summarize(prop_favor = mean(cappun == "FAVOR")) %>%
+  summarize(prop_favor = mean(cappun == "FAVOR")) |>
   pull()
 
 # See the result
@@ -859,9 +859,9 @@ Compute the difference in `p_hats` using the `diff()` function and save it to `d
 
 ```{r ex11, exercise=TRUE}
 # From previous step
-p_hats <- gss2016 %>%
-  group_by(sex) %>%
-  summarize(prop_favor = mean(cappun == "FAVOR")) %>%
+p_hats <- gss2016 |>
+  group_by(sex) |>
+  summarize(prop_favor = mean(cappun == "FAVOR")) |>
   pull()
   
 # Compute difference in proportions
@@ -877,9 +877,9 @@ d_hat
 
 ```{r ex11-solution}
 # From previous step
-p_hats <- gss2016 %>%
-  group_by(sex) %>%
-  summarize(prop_favor = mean(cappun == "FAVOR")) %>%
+p_hats <- gss2016 |>
+  group_by(sex) |>
+  summarize(prop_favor = mean(cappun == "FAVOR")) |>
   pull()
   
 # Compute difference in proportions
@@ -901,9 +901,9 @@ The `stat`istic that you'll be using in this exercise is a `"diff in props"`, wh
 
 
 ```{r d_hat_difference}
-p_hats <- gss2016 %>%
-  group_by(sex) %>%
-  summarize(mean(cappun == "FAVOR", na.rm = TRUE)) %>%
+p_hats <- gss2016 |>
+  group_by(sex) |>
+  summarize(mean(cappun == "FAVOR", na.rm = TRUE)) |>
   pull()
 
 # Compute difference in proportions
@@ -919,13 +919,13 @@ Set up an infer chain which ends with the calculation of many differences in pro
 
 ```{r ex12, exercise=TRUE}
 # Create null distribution
-___ <- gss2016 %>%
+___ <- gss2016 |>
   # Specify the response and explanatory as well as the success
-  ___(___ ~ ___, success = "___") %>%
+  ___(___ ~ ___, success = "___") |>
   # Set up null hypothesis
-  ___(null = "___") %>%
+  ___(null = "___") |>
   # Generate 500 reps by permutation
-  ___(___ = ___, ___ = "___") %>%
+  ___(___ = ___, ___ = "___") |>
   # Calculate the statistics
   ___(stat = ___, order = c("___", "___"))
 ```
@@ -936,13 +936,13 @@ ___ <- gss2016 %>%
 
 ```{r ex12-solution}
 # Create null distribution
-null <- gss2016 %>%
+null <- gss2016 |>
   # specify the response and explanatory as well as the success
-  specify(cappun ~ sex, success = "FAVOR") %>%
+  specify(cappun ~ sex, success = "FAVOR") |>
   # set up null hypothesis
-  hypothesize(null = "independence") %>%
+  hypothesize(null = "independence") |>
   # generate 500 permuted reps
-  generate(reps = 500, type = "permute") %>%
+  generate(reps = 500, type = "permute") |>
   # calculate the statistics
   calculate(stat = "diff in props", order = c("FEMALE", "MALE"))
 ```
@@ -955,10 +955,10 @@ Construct a density plot to visualize the statistics stored in the `null` distri
 
 ```{r ex13, exercise=TRUE, exercise.setup="d_hat_difference"}
 # From previous step
-null <- gss2016 %>%
-  specify(cappun ~ sex, success = "FAVOR") %>%
-  hypothesize(null = "independence") %>%
-  generate(reps = 500, type = "permute") %>%
+null <- gss2016 |>
+  specify(cappun ~ sex, success = "FAVOR") |>
+  hypothesize(null = "independence") |>
+  generate(reps = 500, type = "permute") |>
   calculate(stat = "diff in props", order = c("FEMALE", "MALE"))
   
 # Visualize null
@@ -975,10 +975,10 @@ ___ +
 
 ```{r ex13-solution}
 # From previous step
-null <- gss2016 %>%
-  specify(cappun ~ sex, success = "FAVOR") %>%
-  hypothesize(null = "independence") %>%
-  generate(reps = 500, type = "permute") %>%
+null <- gss2016 |>
+  specify(cappun ~ sex, success = "FAVOR") |>
+  hypothesize(null = "independence") |>
+  generate(reps = 500, type = "permute") |>
   calculate(stat = "diff in props", order = c("FEMALE", "MALE"))
   
 # Visualize null
@@ -997,18 +997,18 @@ Compute the two-tailed p-value.
 
 ```{r ex14, exercise=TRUE, exercise.setup="d_hat_difference"}
 # From previous step
-null <- gss2016 %>%
-  specify(cappun ~ sex, success = "FAVOR") %>%
-  hypothesize(null = "independence") %>%
-  generate(reps = 500, type = "permute") %>%
+null <- gss2016 |>
+  specify(cappun ~ sex, success = "FAVOR") |>
+  hypothesize(null = "independence") |>
+  generate(reps = 500, type = "permute") |>
   calculate(stat = "diff in props", order = c("FEMALE", "MALE"))
   
 # Compute two-tailed p-value
-null %>%
+null |>
   ___(
     one_tailed_pval = ___(___ ___ ___),
     two_tailed_pval = ___ * ___
-  ) %>%
+  ) |>
   pull(two_tailed_pval)
 ```
 
@@ -1018,18 +1018,18 @@ null %>%
 
 ```{r ex14-solution}
 # From previous step
-null <- gss2016 %>%
-  specify(cappun ~ sex, success = "FAVOR") %>%
-  hypothesize(null = "independence") %>%
-  generate(reps = 500, type = "permute") %>%
+null <- gss2016 |>
+  specify(cappun ~ sex, success = "FAVOR") |>
+  hypothesize(null = "independence") |>
+  generate(reps = 500, type = "permute") |>
   calculate(stat = "diff in props", order = c("FEMALE", "MALE"))
   
 # Compute two-tailed p-value
-null %>%
+null |>
   summarize(
     one_tailed_pval = mean(stat <= d_hat),
     two_tailed_pval = 2 * one_tailed_pval
-  ) %>%
+  ) |>
   pull(two_tailed_pval)
 ```
 
@@ -1039,7 +1039,7 @@ null %>%
 What is your conclusion regarding the association between sex and support for the death penalty? Recall that this code calculates the p-value:
 ```{r eval=FALSE}
 # Compute two-tailed p-value
-null %>%
+null |>
   summarize(pval = 2 * mean(stat <= d_hat))
 ```
 
@@ -1057,15 +1057,15 @@ question("",
 
 ```{r, include=FALSE}
 set.seed(31)
-null <- gss2016 %>%
-  specify(cappun ~ sex, success = "FAVOR") %>%
-  hypothesize(null = "independence") %>%
-  generate(reps = 500, type = "permute") %>%
+null <- gss2016 |>
+  specify(cappun ~ sex, success = "FAVOR") |>
+  hypothesize(null = "independence") |>
+  generate(reps = 500, type = "permute") |>
   calculate(stat = "diff in props", order = c("FEMALE", "MALE"))
 
-p_hats <- gss2016 %>%
-  group_by(sex) %>%
-  summarize(mean(cappun == "FAVOR", na.rm = TRUE)) %>%
+p_hats <- gss2016 |>
+  group_by(sex) |>
+  summarize(mean(cappun == "FAVOR", na.rm = TRUE)) |>
   pull()
 
 # Compute difference in proportions
@@ -1084,18 +1084,18 @@ In this exercise you will explore the duality by forming a confidence interval a
 
 ```
 # Reference code for null distribution
-null <- gss2016 %>%
-   specify(cappun ~ sex, success = "FAVOR") %>%
-   hypothesize(null = "independence") %>%
-   generate(reps = 500, type = "permute") %>%
+null <- gss2016 |>
+   specify(cappun ~ sex, success = "FAVOR") |>
+   hypothesize(null = "independence") |>
+   generate(reps = 500, type = "permute") |>
    calculate(stat = "diff in props", order = c("FEMALE", "MALE"))`
 ```
 
 
 ```{r}
-p_hats <- gss2016 %>%
-  group_by(sex) %>%
-  summarize(mean(cappun == "FAVOR", na.rm = TRUE)) %>%
+p_hats <- gss2016 |>
+  group_by(sex) |>
+  summarize(mean(cappun == "FAVOR", na.rm = TRUE)) |>
   pull()
 
 # Compute difference in proportions
@@ -1112,11 +1112,11 @@ Adapt the code used to form the *null distribution* for hypothesis test to form 
 
 ```{r ex15, exercise=TRUE}
 # Create the bootstrap distribution
-___ <- gss2016 %>%
+___ <- gss2016 |>
   # Specify the variables and success
-  ___ %>%
+  ___ |>
   # Generate 500 bootstrap reps
-  ___ %>%
+  ___ |>
   # Calculate statistics
   ___
 ```
@@ -1127,11 +1127,11 @@ ___ <- gss2016 %>%
 
 ```{r ex15-solution}
 # Create the bootstrap distribution
-boot <- gss2016 %>%
+boot <- gss2016 |>
   # Specify the variables and success
-  specify(cappun ~ sex, success = "FAVOR") %>%
+  specify(cappun ~ sex, success = "FAVOR") |>
   # Generate 500 bootstrap reps
-  generate(reps = 500, type = "bootstrap") %>%
+  generate(reps = 500, type = "bootstrap") |>
   # Calculate the statistics
   calculate(stat = "diff in props", order = c("FEMALE", "MALE"))
 ```
@@ -1144,14 +1144,14 @@ boot <- gss2016 %>%
 
 ```{r ex16, exercise=TRUE, exercise.setup="d_hat_difference"}
 # From previous step
-boot <- gss2016 %>%
-  specify(cappun ~ sex, success = "FAVOR") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot <- gss2016 |>
+  specify(cappun ~ sex, success = "FAVOR") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "diff in props", order = c("FEMALE", "MALE"))
     
 # Compute the standard error
-___ <- ___ %>%
-  summarize(se = ___(___)) %>%
+___ <- ___ |>
+  summarize(se = ___(___)) |>
   pull()
   
 # Form the CI (lower, upper)
@@ -1166,14 +1166,14 @@ c(___, ___)
 
 ```{r ex16-solution}
 # From previous step
-boot <- gss2016 %>%
-  specify(cappun ~ sex, success = "FAVOR") %>%
-  generate(reps = 500, type = "bootstrap") %>%
+boot <- gss2016 |>
+  specify(cappun ~ sex, success = "FAVOR") |>
+  generate(reps = 500, type = "bootstrap") |>
   calculate(stat = "diff in props", order = c("FEMALE", "MALE"))
     
 # Compute the standard error
-SE <- boot %>%
-  summarize(se = sd(stat)) %>%
+SE <- boot |>
+  summarize(se = sd(stat)) |>
   pull()
   
 # Form the CI (lower, upper)
@@ -1348,7 +1348,7 @@ This claims that there is no difference in the proportions that favor the death 
 set.seed(384)
 
 # Add coinflip column
-gssmod <- gss2016 %>%
+gssmod <- gss2016 |>
   mutate(coinflip  = sample(c("heads", "tails"), 
   size = nrow(gss2016), 
   replace = TRUE, 
@@ -1360,13 +1360,13 @@ gssmod <- gss2016 %>%
 
 ```{r ex17, exercise=TRUE, exercise.setup="gssmod_init"}
 # Inspect coinflip
-gssmod %>%
+gssmod |>
   select(coinflip)
 
 # Compute two proportions
-___ <- gssmod %>%
-  group_by(coinflip) %>%
-  summarize(prop_favor = mean(___ == ___)) %>%
+___ <- gssmod |>
+  group_by(coinflip) |>
+  summarize(prop_favor = mean(___ == ___)) |>
   pull()
   
 # See the result
@@ -1379,13 +1379,13 @@ p_hats
 
 ```{r ex17-solution}
 # Inspect coinflip
-gssmod %>%
+gssmod |>
   select(coinflip)
   
 # Compute two proportions
-p_hats <- gssmod %>%
-  group_by(coinflip) %>%
-  summarize(prop_favor = mean(cappun == "FAVOR")) %>%
+p_hats <- gssmod |>
+  group_by(coinflip) |>
+  summarize(prop_favor = mean(cappun == "FAVOR")) |>
   pull()
   
 # See the result
@@ -1396,9 +1396,9 @@ Compute your final test statistic, `d_hat`, as the difference in `p_hats`.
 
 ```{r ex18, exercise=TRUE, exercise.setup="gssmod_init"}
 # From previous step
-p_hats <- gssmod %>%
-  group_by(coinflip) %>%
-  summarize(prop_favor = mean(cappun == "FAVOR")) %>%
+p_hats <- gssmod |>
+  group_by(coinflip) |>
+  summarize(prop_favor = mean(cappun == "FAVOR")) |>
   pull()
   
 # Compute difference in proportions
@@ -1411,9 +1411,9 @@ d_hat <- ___
 
 ```{r ex18-solution}
 # From previous step
-p_hats <- gssmod %>%
-  group_by(coinflip) %>%
-  summarize(prop_favor = mean(cappun == "FAVOR")) %>%
+p_hats <- gssmod |>
+  group_by(coinflip) |>
+  summarize(prop_favor = mean(cappun == "FAVOR")) |>
   pull()
   
 # Compute difference in proportions
@@ -1424,14 +1424,14 @@ Construct the null distribution of the difference in proportions under the null 
 
 ```{r ex19, exercise=TRUE, exercise.setup="gssmod_init"}
 # From previous steps
-p_hats <- gssmod %>%
-  group_by(coinflip) %>%
-  summarize(prop_favor = mean(cappun == "FAVOR")) %>%
+p_hats <- gssmod |>
+  group_by(coinflip) |>
+  summarize(prop_favor = mean(cappun == "FAVOR")) |>
   pull()
 d_hat <- diff(p_hats)
 
 # Form null distribution
-null <- gssmod %>%
+null <- gssmod |>
   # Specify the response and explanatory var and success
   __
   # Set up the null hypothesis
@@ -1448,20 +1448,20 @@ null <- gssmod %>%
 
 ```{r ex19-solution}
 # From previous steps
-p_hats <- gssmod %>%
-  group_by(coinflip) %>%
-  summarize(prop_favor = mean(cappun == "FAVOR")) %>%
+p_hats <- gssmod |>
+  group_by(coinflip) |>
+  summarize(prop_favor = mean(cappun == "FAVOR")) |>
   pull()
 d_hat <- diff(p_hats)
 
 # Form null distribution
-null <- gssmod %>%
+null <- gssmod |>
   # Specify the response and explanatory var and success
-  specify(cappun ~ coinflip, success = "FAVOR") %>%
+  specify(cappun ~ coinflip, success = "FAVOR") |>
   # Set up the null hypothesis
-  hypothesize(null = "independence") %>%
+  hypothesize(null = "independence") |>
   # Generate 500 permuted data sets
-  generate(reps = 500, type = "permute") %>%
+  generate(reps = 500, type = "permute") |>
   # Calculate statistics
   calculate(stat = "diff in props", order = c("heads", "tails"))
 ```
@@ -1470,15 +1470,15 @@ Visualize the distribution of the null statistics using a density plot and add a
 
 ```{r ex20, exercise=TRUE, exercise.setup="gssmod_init"}
 # From previous steps
-p_hats <- gssmod %>%
-  group_by(coinflip) %>%
-  summarize(prop_favor = mean(cappun == "FAVOR")) %>%
+p_hats <- gssmod |>
+  group_by(coinflip) |>
+  summarize(prop_favor = mean(cappun == "FAVOR")) |>
   pull()
 d_hat <- diff(p_hats)
-null <- gssmod %>%
-  specify(cappun ~ coinflip, success = "FAVOR") %>%
-  hypothesize(null = "independence") %>%
-  generate(reps = 500, type = "permute") %>%
+null <- gssmod |>
+  specify(cappun ~ coinflip, success = "FAVOR") |>
+  hypothesize(null = "independence") |>
+  generate(reps = 500, type = "permute") |>
   calculate(stat = "diff in props", order = c("heads", "tails"))
   
 # Visualize null
@@ -1495,15 +1495,15 @@ ___ +
 
 ```{r ex20-solution}
 # From previous steps
-p_hats <- gssmod %>%
-  group_by(coinflip) %>%
-  summarize(prop_favor = mean(cappun == "FAVOR")) %>%
+p_hats <- gssmod |>
+  group_by(coinflip) |>
+  summarize(prop_favor = mean(cappun == "FAVOR")) |>
   pull()
 d_hat <- diff(p_hats)
-null <- gssmod %>%
-  specify(cappun ~ coinflip, success = "FAVOR") %>%
-  hypothesize(null = "independence") %>%
-  generate(reps = 500, type = "permute") %>%
+null <- gssmod |>
+  specify(cappun ~ coinflip, success = "FAVOR") |>
+  hypothesize(null = "independence") |>
+  generate(reps = 500, type = "permute") |>
   calculate(stat = "diff in props", order = c("heads", "tails"))
   
 # Visualize null
@@ -1533,20 +1533,20 @@ Once you have the rejection region defined by the upper and lower cutoffs, you c
 
 ```{r decision_init, echo=FALSE}
 set.seed(384)
-gssmod <- gss2016 %>%
+gssmod <- gss2016 |>
   mutate(coinflip  = sample(c("heads", "tails"), 
                        size = nrow(gss2016), 
                        replace = TRUE,
                        prob = c(0.5, 0.5)))
-p_hats <- gssmod %>%
-  group_by(coinflip) %>%
-  summarize(mean(cappun == "FAVOR")) %>%
+p_hats <- gssmod |>
+  group_by(coinflip) |>
+  summarize(mean(cappun == "FAVOR")) |>
   pull()
 d_hat <- diff(p_hats)
-null <- gssmod %>%
-  specify(cappun ~ coinflip, success = "FAVOR") %>%
-  hypothesize(null = "independence") %>%
-  generate(reps = 500, type = "permute") %>%
+null <- gssmod |>
+  specify(cappun ~ coinflip, success = "FAVOR") |>
+  hypothesize(null = "independence") |>
+  generate(reps = 500, type = "permute") |>
   calculate(stat = "diff in props", order = c("heads", "tails"))
 ```
 
@@ -1559,15 +1559,15 @@ null <- gssmod %>%
 ___
 
 # Find cutoffs
-lower <- null %>%
-  summarize(l = quantile(___, probs = ___)) %>%
+lower <- null |>
+  summarize(l = quantile(___, probs = ___)) |>
   pull()
-upper <- null %>%
-  summarize(u = quantile(___, probs = ___)) %>%
+upper <- null |>
+  summarize(u = quantile(___, probs = ___)) |>
   pull()
 
 # Is d_hat inside cutoffs?
-d_hat %>%
+d_hat |>
   between(___, ___)
 ```
 
@@ -1582,15 +1582,15 @@ d_hat %>%
 alpha <- 0.05
 
 # Find cutoffs
-lower <- null %>%
-  summarize(l = quantile(stat, probs = alpha / 2)) %>%
+lower <- null |>
+  summarize(l = quantile(stat, probs = alpha / 2)) |>
   pull()
-upper <- null %>%
-  summarize(u = quantile(stat, probs = 1 - alpha / 2)) %>%
+upper <- null |>
+  summarize(u = quantile(stat, probs = 1 - alpha / 2)) |>
   pull()
   
 # Is d_hat inside cutoffs?
-d_hat %>%
+d_hat |>
   between(lower, upper)
 ```
 
@@ -1599,11 +1599,11 @@ Visualize the reject and fail to reject regions by starting with your null distr
 ```{r ex22, exercise=TRUE, exercise.setup="decision_init"}
 # From previous step
 alpha <- 0.05
-upper <- null %>%
-  summarize(u = quantile(stat, probs = 1 - alpha / 2)) %>%
+upper <- null |>
+  summarize(u = quantile(stat, probs = 1 - alpha / 2)) |>
   pull()
-lower <- null %>%
-  summarize(l = quantile(stat, probs = alpha / 2)) %>%
+lower <- null |>
+  summarize(l = quantile(stat, probs = alpha / 2)) |>
   pull()
   
 # Visualize cutoffs
@@ -1623,11 +1623,11 @@ ggplot(null, aes(x = stat)) +
 ```{r ex22-solution}
 # From previous step
 alpha <- 0.05
-upper <- null %>%
-  summarize(u = quantile(stat, probs = 1 - alpha / 2)) %>%
+upper <- null |>
+  summarize(u = quantile(stat, probs = 1 - alpha / 2)) |>
   pull()
-lower <- null %>%
-  summarize(l = quantile(stat, probs = alpha / 2)) %>%
+lower <- null |>
+  summarize(l = quantile(stat, probs = alpha / 2)) |>
   pull()
   
 # Visualize cutoffs
