--- a/05-infer/07-lesson/05-07-lesson.Rmd
+++ b/05-infer/07-lesson/05-07-lesson.Rmd
@@ -30,7 +30,7 @@ knitr::opts_chunk$set(fig.align = "center",
 set.seed(421398)
 
 # Calculate difference between before and after
-stem_cell <- stem_cell %>%
+stem_cell <- stem_cell |>
   mutate(change = after - before)
 
 ```
@@ -131,8 +131,8 @@ library(infer)
 We start with the data frame containing our variables of interest, and specify our model as response vs. explanatory. In our example the response variable is `change` and the explanatory variable is treatment (`trmt`) group.
 
 ```{r eval=FALSE, echo=TRUE}
-diff_ht_mean <- stem_cell %>%
-  specify(__) %>%   # Use the form: y-variable ~ x-variable
+diff_ht_mean <- stem_cell |>
+  specify(__) |>   # Use the form: y-variable ~ x-variable
 ```
 
 
@@ -140,9 +140,9 @@ diff_ht_mean <- stem_cell %>%
 
 We then declare the null hypothesis. For a difference in means, the null hypothesize should be specified as `"independence"`, which indicates that we are assuming the change in heart pumping capacity is independent of the treatment group the sheep was in. 
 ```{r eval=FALSE, echo=TRUE}
-diff_ht_mean <- stem_cell %>%
-  specify(__) %>%                    # The same step from above! 
-  hypothesize(null = __) %>%         # Use a hypothesis of "independence" 
+diff_ht_mean <- stem_cell |>
+  specify(__) |>                    # The same step from above! 
+  hypothesize(null = __) |>         # Use a hypothesis of "independence" 
   
 ```
 
@@ -153,10 +153,10 @@ diff_ht_mean <- stem_cell %>%
 Then, using the data, the model we specified, and the null hypothesis we declared, we generate many new samples by permuting the labels of the two groups.
 
 ```{r eval=FALSE, echo=TRUE}
-diff_ht_mean <- stem_cell %>%
-  specify(__) %>%                    # Same step from above!
-  hypothesize(null = __) %>%         # Same step from above!
-  generate(reps = __, type = __) %>% # Generate permutation ("permute") statistics and specify how many (at least 1000)
+diff_ht_mean <- stem_cell |>
+  specify(__) |>                    # Same step from above!
+  hypothesize(null = __) |>         # Same step from above!
+  generate(reps = __, type = __) |> # Generate permutation ("permute") statistics and specify how many (at least 1000)
   ...
 ```
 
@@ -168,10 +168,10 @@ Finally, we calculate the test statistic for each of our permutations. The stati
 Since we're testing for a difference, the order in which we subtract matters. We can specify it using the `order` argument in the `calculate()` function. For example, to achieve `group1 - group2` use `order = c("group1", "group2")`.
 
 ```{r eval=FALSE, echo=TRUE}
-diff_ht_mean <- stem_cell %>%
-  specify(__) %>%                     # Same step from above! 
-  hypothesize(null = __) %>%          # Same step from above! 
-  generate(reps = __, type = __) %>% # Same step from above! 
+diff_ht_mean <- stem_cell |>
+  specify(__) |>                     # Same step from above! 
+  hypothesize(null = __) |>          # Same step from above! 
+  generate(reps = __, type = __) |> # Same step from above! 
   calculate(stat = "diff in means", order = c("trmt", "ctrl")   # Specify to calculate a difference in means and what order of subtraction to use
 ```
 
@@ -198,7 +198,7 @@ First, use the `mutate()` function to add a column to `stem_cell` named `change`
 
 ```{r stem_cell, exercise=TRUE}
 # Calculate difference between before and after
-stem_cell <- stem_cell %>%
+stem_cell <- stem_cell |>
   ___(change = ___)
 ```
 
@@ -208,7 +208,7 @@ stem_cell <- stem_cell %>%
 
 ```{r stem_cell-solution}
 # Calculate difference between before and after
-stem_cell <- stem_cell %>%
+stem_cell <- stem_cell |>
   mutate(change = after - before)
 ```
 
@@ -224,13 +224,13 @@ Then, use the `calculate()` function to calculate the observed difference in mea
 
 ```{r stem_cell_2, exercise=TRUE}
 # From previous step
-stem_cell <- stem_cell %>%
+stem_cell <- stem_cell |>
   mutate(change = after - before)
   
 # Calculate observed difference in means
-diff_mean <- stem_cell %>%
+diff_mean <- stem_cell |>
   # Specify the response and explanatory variables
-  specify(___) %>%
+  specify(___) |>
   # Calculate observed difference in means 
   calculate(___)
 
@@ -254,9 +254,9 @@ Conduct the hypothesis test and compute the p-value for evaluating whether there
 
 ```{r stem_cell_3-setup, include=FALSE}
 # Calculate observed difference in means
-diff_mean <- stem_cell %>%
+diff_mean <- stem_cell |>
   # Specify the response and explanatory variables
-  specify(change ~ trmt) %>%
+  specify(change ~ trmt) |>
   # Calculate observed difference in means 
   calculate(stat = "diff in means", order = c("esc", "ctrl"))
 ```
@@ -273,13 +273,13 @@ First, generate 1000 differences in means via randomization (we can call it this
 
 ```{r stem_cell_3, exercise=TRUE}
 # Generate 1000 differences in means via randomization
-diff_mean_ht <- stem_cell %>%
+diff_mean_ht <- stem_cell |>
   # y ~ x
-  specify(___ ~ ___) %>% 
+  specify(___ ~ ___) |> 
   # Null = no difference between means
-  hypothesize(null = "___") %>% 
+  hypothesize(null = "___") |> 
   # Shuffle labels 1000 times
-  generate(reps = ___, type = "___") %>% 
+  generate(reps = ___, type = "___") |> 
   # Calculate test statistic
   calculate(stat = "___", order = c("esc", "___")) 
 ```
@@ -294,13 +294,13 @@ diff_mean_ht <- stem_cell %>%
 
 ```{r stem_cell_3-solution}
 # Generate 1000 differences in means via randomization
-diff_mean_ht <- stem_cell %>%
+diff_mean_ht <- stem_cell |>
   # y ~ x
-  specify(change ~ trmt) %>% 
+  specify(change ~ trmt) |> 
   # Null = no difference between means
-  hypothesize(null = "independence") %>%  
+  hypothesize(null = "independence") |>  
   # Shuffle labels 1000 times
-  generate(reps = 1000, type = "permute") %>% 
+  generate(reps = 1000, type = "permute") |> 
   # Calculate test statistic
   calculate(stat = "diff in means", order = c("esc", "ctrl")) 
 ```
@@ -314,33 +314,33 @@ Then, calculate the one-sided p-value. Use the `get_p_value()` function to surve
 
 ```{r stem_cell_4-setup, include=FALSE}
 # Calculate observed difference in means
-diff_mean <- stem_cell %>%
+diff_mean <- stem_cell |>
   # Specify the response and explanatory variables
-  specify(change ~ trmt) %>%
+  specify(change ~ trmt) |>
   # Calculate observed difference in means 
   calculate(stat = "diff in means", order = c("esc", "ctrl"))
 
 # Generate 1000 differences in means via randomization
-diff_mean_ht <- stem_cell %>%
+diff_mean_ht <- stem_cell |>
   # y ~ x
-  specify(change ~ trmt) %>% 
+  specify(change ~ trmt) |> 
   # Null = no difference between means
-  hypothesize(null = "independence") %>%  
+  hypothesize(null = "independence") |>  
   # Shuffle labels 1000 times
-  generate(reps = 1000, type = "permute") %>% 
+  generate(reps = 1000, type = "permute") |> 
   # Calculate test statistic
   calculate(stat = "diff in means", order = c("esc", "ctrl")) 
 
 ```
 
 ```{r stem_cell_4, exercise=TRUE}
-diff_mean_ht %>%
+diff_mean_ht |>
   get_p_value(___)   # use diff_mean as the observed statistic, and "greater" as the direction
 
 ```
 
 ```{r stem_cell_4-solution}
-diff_mean_ht %>%
+diff_mean_ht |>
   get_p_value(obs_stat = diff_mean, direction = "greater") 
 ```
 
@@ -376,7 +376,7 @@ Use the `is.na()` function to specify that you want values of `habit` that are n
 
 ```{r smoking, exercise=TRUE}
 # Filter for subjects with non-missing habit
-ncbirths_complete_habit <- ncbirths %>%
+ncbirths_complete_habit <- ncbirths |>
   filter(___)
 ```
 
@@ -390,7 +390,7 @@ filter(!is.na(habit))
 
 ```{r smoking-solution}
 # Filter for subjects with non-missing habit
-ncbirths_complete_habit <- ncbirths %>%
+ncbirths_complete_habit <- ncbirths |>
   filter(!is.na(habit))
 ```
 
@@ -401,15 +401,15 @@ Next, use `specify()` and `calculate()` to calculate observed difference in mean
 
 ```{r smoking_2-setup, include = FALSE}
 # From previous steps
-ncbirths_complete_habit <- ncbirths %>%
+ncbirths_complete_habit <- ncbirths |>
   filter(!is.na(habit))
 ```
 
 ```{r smoking_2, exercise=TRUE}
 # Calculate observed difference in means
-diff_mean_obs <- ncbirths_complete_habit %>%
+diff_mean_obs <- ncbirths_complete_habit |>
   # Specify the response and explanatory variables
-  specify(___) %>%
+  specify(___) |>
   # Calculate the observed difference in means
   calculate(stat = " ", order = c("nonsmoker", " "))
 ```
@@ -423,9 +423,9 @@ diff_mean_obs <- ncbirths_complete_habit %>%
 ```{r smoking_2-solution}
 
 # Calculate observed difference in means
-diff_mean_obs <- ncbirths_complete_habit %>%
+diff_mean_obs <- ncbirths_complete_habit |>
   # Specify the response and explanatory variables
-  specify(weight ~ habit) %>%
+  specify(weight ~ habit) |>
   # Calculate the observed difference in means
   calculate(stat = "diff in means", order = c("nonsmoker", "smoker"))
 ```
@@ -441,26 +441,26 @@ Then, generate 1000 differences in means via permutation and store as `diff_mean
 
 ```{r smoking_3-setup, include = FALSE}
 # From previous steps
-ncbirths_complete_habit <- ncbirths %>%
+ncbirths_complete_habit <- ncbirths |>
   filter(!is.na(habit))
 
-diff_mean_obs <- ncbirths_complete_habit %>%
-  group_by(habit) %>%
-  summarize(mean_weight = mean(weight)) %>%
-  pull() %>%
+diff_mean_obs <- ncbirths_complete_habit |>
+  group_by(habit) |>
+  summarize(mean_weight = mean(weight)) |>
+  pull() |>
   diff()
 ```
 
 
 ```{r smoking_3, exercise=TRUE}
 # Generate 1000 differences in means via randomization
-diff_mean_ht <- ncbirths_complete_habit %>% 
+diff_mean_ht <- ncbirths_complete_habit |> 
   # Specify weight vs. habit
-  specify(___) %>% 
+  specify(___) |> 
   # Null = independence of variables
-  hypothesize(___) %>% 
+  hypothesize(___) |> 
   # Generate 1000 permutations
-  generate(___) %>%
+  generate(___) |>
   # Calculate test statistic, nonsmoker then smoker
   calculate(___)
 ```
@@ -476,13 +476,13 @@ diff_mean_ht <- ncbirths_complete_habit %>%
 
 ```{r smoking_3-solution}
 # Generate 1000 differences in means via permutation
-diff_mean_ht <- ncbirths_complete_habit %>% 
+diff_mean_ht <- ncbirths_complete_habit |> 
   # Specify weight vs. habit
-  specify(weight ~ habit) %>% 
+  specify(weight ~ habit) |> 
   # Null = independence of variables
-  hypothesize(null = "independence") %>% 
+  hypothesize(null = "independence") |> 
   # Generate 1000 permutations
-  generate(reps = 1000, type = "permute") %>%
+  generate(reps = 1000, type = "permute") |>
   # Calculate test statistic, nonsmoker then smoker
   calculate(stat = "diff in means", order = c("nonsmoker", "smoker")) 
 ```
@@ -498,19 +498,19 @@ And finally, calculate the p-value for the hypothesis test. Use the `get_p_value
 
 ```{r smoking_4-setup, include = FALSE}
 # From previous steps
-ncbirths_complete_habit <- ncbirths %>%
+ncbirths_complete_habit <- ncbirths |>
   filter(!is.na(habit))
 
-diff_mean_obs <- ncbirths_complete_habit %>%
-  group_by(habit) %>%
-  summarize(mean_weight = mean(weight)) %>%
-  pull() %>%
+diff_mean_obs <- ncbirths_complete_habit |>
+  group_by(habit) |>
+  summarize(mean_weight = mean(weight)) |>
+  pull() |>
   diff()
 
-diff_mean_ht <- ncbirths_complete_habit %>% 
-  specify(weight ~ habit) %>% 
-  hypothesize(null = "independence") %>% 
-  generate(reps = 1000, type = "permute") %>%
+diff_mean_ht <- ncbirths_complete_habit |> 
+  specify(weight ~ habit) |> 
+  hypothesize(null = "independence") |> 
+  generate(reps = 1000, type = "permute") |>
   calculate(stat = "diff in means", order = c("nonsmoker", "smoker")) 
 ```
 
@@ -518,7 +518,7 @@ diff_mean_ht <- ncbirths_complete_habit %>%
 ```{r smoking_4, exercise=TRUE}
  
 # Calculate p-value
-  diff_mean_ht %>%
+  diff_mean_ht |>
   # use diff_mean as the observed statistic, and "two-sided" as the direction
   get_p_value(obs_stat = , direction = " ") 
 
@@ -532,7 +532,7 @@ diff_mean_ht <- ncbirths_complete_habit %>%
 
 ```{r smoking_4-solution}
 # Calculate p-value
-  diff_mean_ht %>%
+  diff_mean_ht |>
   # use diff_mean as the observed statistic, and "two-sided" as the direction
   get_p_value(obs_stat = diff_mean_obs, direction = "two-sided") 
 
@@ -579,17 +579,17 @@ First, generate 1500 bootstrap differences in means for birth weight by smoking 
 
 ```{r smoking_bs-setup, include=FALSE}
 # Remove subjects with missing habit
-ncbirths_complete_habit <- ncbirths %>%
+ncbirths_complete_habit <- ncbirths |>
   filter(!is.na(habit))
 ```
 
 ```{r smoking_bs, exercise=TRUE}
 # Generate 1500 bootstrap difference in means
-diff_mean_ci <- ncbirths_complete_habit %>%
+diff_mean_ci <- ncbirths_complete_habit |>
   # Specify weight vs. habit
-  specify(___) %>%
+  specify(___) |>
   # Generate 1500 bootstrap replicates
-  generate(___) %>%
+  generate(___) |>
   # Calculate the difference in means, nonsmoker then smoker
   calculate(___)
 ```
@@ -604,11 +604,11 @@ diff_mean_ci <- ncbirths_complete_habit %>%
 
 ```{r smoking_bs-solution}
 # Generate 1500 bootstrap difference in means
-diff_mean_ci <- ncbirths_complete_habit %>%
+diff_mean_ci <- ncbirths_complete_habit |>
   # Specify weight vs. habit
-  specify(weight ~ habit) %>%
+  specify(weight ~ habit) |>
   # Generate 1500 bootstrap replicates
-  generate(reps = 1500, type = "bootstrap") %>%
+  generate(reps = 1500, type = "bootstrap") |>
   # Calculate the difference in means, nonsmoker then smoker
   calculate(stat = "diff in means", order = c("nonsmoker", "smoker"))
 ```
@@ -619,20 +619,20 @@ Then, calculate a 95% confidence interval for the bootstrap difference in mean b
 
 ```{r smoking_bs_2-setup, include = FALSE}
 # Remove subjects with missing habit
-ncbirths_complete_habit <- ncbirths %>%
+ncbirths_complete_habit <- ncbirths |>
   filter(!is.na(habit))
 
 # From previous step
-diff_mean_ci <- ncbirths_complete_habit %>%
-  specify(weight ~ habit) %>%
-  generate(reps = 1500, type = "bootstrap") %>%
+diff_mean_ci <- ncbirths_complete_habit |>
+  specify(weight ~ habit) |>
+  generate(reps = 1500, type = "bootstrap") |>
   calculate(stat = "diff in means", order = c("nonsmoker", "smoker"))
 
 ```
 
 ```{r smoking_bs_2, exercise=TRUE}
 # Calculate the 95% CI via percentile method
-diff_mean_ci %>%
+diff_mean_ci |>
   get_confidence_interval(level = , type = " ")
 ```
 
@@ -645,13 +645,13 @@ diff_mean_ci %>%
 
 ```{r smoking_bs_2-solution}
 # From previous step
-diff_mean_ci <- ncbirths_complete_habit %>%
-  specify(weight ~ habit) %>%
-  generate(reps = 1500, type = "bootstrap") %>%
+diff_mean_ci <- ncbirths_complete_habit |>
+  specify(weight ~ habit) |>
+  generate(reps = 1500, type = "bootstrap") |>
   calculate(stat = "diff in means", order = c("nonsmoker", "smoker"))
   
 # Calculate the 95% CI via percentile method
-diff_mean_ci %>%
+diff_mean_ci |>
   get_confidence_interval(level = 0.95, type = "percentile")
 ```
 
@@ -670,7 +670,7 @@ Filter `ncbirths` for rows where __both__ smoking `habit` and length of pregnanc
 
 ```{r smoking_bs_3, exercise=TRUE}
 # Filter for non-missing habit & non-missing weeks
-ncbirths_complete_habit_weeks <- ncbirths %>%
+ncbirths_complete_habit_weeks <- ncbirths |>
   filter(___, ___) 
 ```
 
@@ -682,7 +682,7 @@ Specifically, the conditions should look like: `!is.na(habit)` and `!is.na(weeks
 
 ```{r smoking_bs_3-solution}
 # Filter for non-missing habit & non-missing weeks
-ncbirths_complete_habit_weeks <- ncbirths %>%
+ncbirths_complete_habit_weeks <- ncbirths |>
   filter(!is.na(habit), !is.na(weeks))
 ```
 
@@ -696,18 +696,18 @@ Now that we've eliminated the missing data, generate 1500 bootstrap difference i
 
 ```{r smoking_bs_4-setup, include = FALSE}
 # Filter for non-missing habit & non-missing weeks
-ncbirths_complete_habit_weeks <- ncbirths %>%
+ncbirths_complete_habit_weeks <- ncbirths |>
   filter(!is.na(habit), !is.na(weeks))
 ```
 
 
 ```{r smoking_bs_4, exercise=TRUE}
 # Generate 1500 bootstrap difference in medians
-diff_med_ci <- ncbirths_complete_habit_weeks %>%
+diff_med_ci <- ncbirths_complete_habit_weeks |>
   # Specify weeks versus habit
-  specify(___) %>%
+  specify(___) |>
   # Generate 1500 bootstrap replicates
-  generate(___) %>%
+  generate(___) |>
   # Calculate the difference in medians, nonsmoker then smoker
   calculate(___)
 ```
@@ -721,11 +721,11 @@ diff_med_ci <- ncbirths_complete_habit_weeks %>%
 
 ```{r smoking_bs_4-solution}
 # Generate 1500 bootstrap difference in medians
-diff_med_ci <- ncbirths_complete_habit_weeks %>%
+diff_med_ci <- ncbirths_complete_habit_weeks |>
   # Specify weeks versus habit
-  specify(weeks ~ habit) %>%
+  specify(weeks ~ habit) |>
   # Generate 1500 bootstrap replicates
-  generate(reps = 1500, type = "bootstrap") %>%
+  generate(reps = 1500, type = "bootstrap") |>
   # Calculate the difference in medians, nonsmoker then smoker
   calculate(stat = "diff in medians", order = c("nonsmoker", "smoker"))
 ```
@@ -736,19 +736,19 @@ Then, calculate a 92% confidence interval for the bootstrap difference in median
 
 ```{r smoking_bs_5-setup, include = FALSE}
 # Filter for non-missing habit & non-missing weeks
-ncbirths_complete_habit_weeks <- ncbirths %>%
+ncbirths_complete_habit_weeks <- ncbirths |>
   filter(!is.na(habit), !is.na(weeks))
 
-diff_med_ci <- ncbirths_complete_habit_weeks %>%
-  specify(weeks ~ habit) %>%
-  generate(reps = 1500, type = "bootstrap") %>%
+diff_med_ci <- ncbirths_complete_habit_weeks |>
+  specify(weeks ~ habit) |>
+  generate(reps = 1500, type = "bootstrap") |>
   calculate(stat = "diff in medians", order = c("nonsmoker", "smoker"))
 ```
 
 
 ```{r smoking_bs_5, exercise=TRUE}
 # Calculate the 95% CI via percentile method
-diff_med_ci %>%
+diff_med_ci |>
   get_confidence_interval(level = , type = " ")
 ```
 
@@ -761,7 +761,7 @@ diff_med_ci %>%
 
 ```{r smoking_bs_5-solution}
 # Calculate the 95% CI via percentile method
-diff_med_ci %>%
+diff_med_ci |>
   get_confidence_interval(level = 0.92, type = "percentile")
 ```
 
@@ -786,7 +786,7 @@ One obvious measure of pay is annual income. However instead of comparing annual
 To do so we'll make the assumption that there are 52 weeks in a year, and calculate hourly rate as income divided by weekly hours times 52 weeks in the year.
 
 ```{r, echo = TRUE}
-acs12 <- acs12 %>%
+acs12 <- acs12 |>
   mutate(hrly_pay = income / (hrs_work * 52))
 ```
 
@@ -809,10 +809,10 @@ If $\mu$ is defined as average hourly pay in the population, the null hypothesis
 ### Summary statistics
 
 ```{r}
-acs12 %>%
-  filter(!is.na(hrly_pay)) %>%
-  mutate(citizen = if_else(citizen == "no", "Non-citizen", "Citizen"), ) %>% 
-  group_by(citizen) %>%
+acs12 |>
+  filter(!is.na(hrly_pay)) |>
+  mutate(citizen = if_else(citizen == "no", "Non-citizen", "Citizen"), ) |> 
+  group_by(citizen) |>
   summarise(x_bar = round(mean(hrly_pay), 2),
             s = round(sd(hrly_pay), 2),
             n = length(hrly_pay)) 
@@ -848,12 +848,12 @@ Here, our null hypothesis alternative hypothesis says that there is a difference
 ### 
 
 ```{r, echo = FALSE}
-acs12 <- acs12 %>%
+acs12 <- acs12 |>
   mutate(citizen = if_else(citizen == "no", "Non-citizen", "Citizen"))
 ```
 
 ```{r, echo=TRUE}
-acs12 %>%
+acs12 |>
 t_test(hrly_pay ~ citizen,  
        order = c("Citizen", "Non-citizen"), 
        alternative = "two-sided", 
@@ -900,7 +900,7 @@ First, filter `acs12` for rows where hourly pay (`hrly_pay`) and U.S. citizenshi
 
 ```{r citizens, exercise=TRUE}
 # Filter for non-missing hrly_pay and non-missing citizen
-acs12_complete_hrlypay_citizen <- acs12 %>%
+acs12_complete_hrlypay_citizen <- acs12 |>
   filter(___, ___)
 ```
 
@@ -912,7 +912,7 @@ Specifically, the arguments should look like: `!is.na(hrly_pay)` and `!is.na(cit
 
 ```{r citizens-solution}
 # Filter for non-missing hrly_pay and non-missing citizen
-acs12_complete_hrlypay_citizen <- acs12 %>%
+acs12_complete_hrlypay_citizen <- acs12 |>
   filter(!is.na(hrly_pay), !is.na(citizen))
 ```
 
@@ -926,14 +926,14 @@ Next calculate summary statistics for citizens and non-citizens. To do this, use
 
 ```{r citizens_3-setup, include = FALSE}
 ## Complete hourly pay and citizenship 
-acs12_complete_hrlypay_citizen <- acs12 %>% 
+acs12_complete_hrlypay_citizen <- acs12 |> 
   filter(!is.na(hrly_pay))
 ```
 
 ```{r citizens_3, exercise=TRUE}
-acs12_complete_hrlypay_citizen %>%
+acs12_complete_hrlypay_citizen |>
   # Group by citizen
-  group_by(___) %>%
+  group_by(___) |>
   summarize(
     # Calculate mean hourly pay
     mean_wage = ___,
@@ -952,9 +952,9 @@ acs12_complete_hrlypay_citizen %>%
 </div>
 
 ```{r citizens_3-solution}
-acs12_complete_hrlypay_citizen %>%
+acs12_complete_hrlypay_citizen |>
   # Group by citizen
-  group_by(citizen) %>%
+  group_by(citizen) |>
   summarize(
     # Calculate mean hourly pay
     mean_wage = mean(hrly_pay),
@@ -975,13 +975,13 @@ Finally, plot a histogram of the `hrly_pay`, faceted by citizenship status.
 
 ```{r citizens_4-setup, include = FALSE}
 ## Complete hourly pay and citizenship 
-acs12_complete_hrlypay_citizen <- acs12 %>%
+acs12_complete_hrlypay_citizen <- acs12 |>
   filter(!is.na(hrly_pay), !is.na(citizen))
 
 ```
 
 ```{r citizens_4, exercise=TRUE}
-acs12_complete_hrlypay_citizen %>% 
+acs12_complete_hrlypay_citizen |> 
   # Using acs12_complete_hrlypay_citizen, plot hrly_pay
   ggplot(___) +
   # Add a histogram layer
@@ -1000,7 +1000,7 @@ acs12_complete_hrlypay_citizen %>%
 
 ```{r citizens_4-solution}
 # Using acs12_complete_hrlypay_citizen, plot hrly_pay
-acs12_complete_hrlypay_citizen %>% 
+acs12_complete_hrlypay_citizen |> 
 ggplot(aes(x = hrly_pay)) +
   # Add a histogram layer
   geom_histogram(binwidth = 5) +
@@ -1019,13 +1019,13 @@ The `acs12_complete_hrlypay_citizen` is already loaded for you.
 
 ```{r citizens_5-setup, include = FALSE}
 ## Complete hourly pay and citizenship 
-acs12_complete_hrlypay_citizen <- acs12 %>%
+acs12_complete_hrlypay_citizen <- acs12 |>
   filter(!is.na(hrly_pay), !is.na(citizen))
 ```
 
 ```{r citizens_5, exercise=TRUE}
 # Construct 90% CI using a t-test
-test_results <- acs12_complete_hrlypay_citizen %>% 
+test_results <- acs12_complete_hrlypay_citizen |> 
   t_test(___ ~ ___, 
             order = c("Citizen", " "), 
             alternative = " ", 
@@ -1047,7 +1047,7 @@ test_results
 
 ```{r citizens_5-solution}
 # Construct 90% CI using a t-test
-test_results <- acs12_complete_hrlypay_citizen %>% 
+test_results <- acs12_complete_hrlypay_citizen |> 
   t_test(hrly_pay ~ citizen, 
             order = c("Citizen", "Non-citizen"), 
             alternative = "two-sided", 
